src/test/deca/syntax/valid/objet/ClassDeclBodyVarPublic.deca
// Description : test déclaration d'un field public
// Resultats : ok

class Thing {
    int i;
}
