src/test/deca/syntax/invalid/objet/ClassFieldSansNom.deca
// mismatched input ';' expecting IDENT
// Description : field sans nom 
// Resultat : erreur en ligne 7: un field a besoin d'un IDENT

class Thing {
    
    protected ;

}
